--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Veterinaria Genérica</title>
+	<title>Veterinaria Perro Feliz</title>
 </head>
 <body>
 	<header>
