--- a/index.html
+++ b/index.html
@@ -1,40 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Veterinaria Perro Feliz</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Perro Feliz | Veterinaria</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+    <style>
+        /* Agrega tus estilos personalizados aquí */
+    </style>
 </head>
 <body>
-	<header>
-		<h1>Veterinaria Genérica</h1>
-		<nav>
-			<ul>
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Servicios</a></li>
-				<li><a href="#">Equipo</a></li>
-				<li><a href="#">Contacto</a></li>
-			</ul>
-		</nav>
-	</header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Perro Feliz</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-	<main>
-		<section>
-			<h2>Nuestros servicios</h2>
-			<p>Ofrecemos servicios médicos de calidad para animales de compañía, incluyendo chequeos regulares, vacunaciones, cirugías y tratamientos especializados.</p>
-		</section>
+    <div class="jumbotron">
+        <h1 class="display-4">Bienvenidos a Perro Feliz</h1>
+        <p class="lead">En nuestra veterinaria ofrecemos servicios de alta calidad para el cuidado de tu mascota.</p>
+        <hr class="my-4">
+        <p>Contáctanos para más información y citas.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Contacto</a>
+    </div>
 
-		<section>
-			<h2>Nuestro equipo</h2>
-			<p>Nuestros veterinarios y personal de apoyo están altamente capacitados y tienen experiencia en una variedad de áreas de la medicina veterinaria.</p>
-		</section>
-
-		<section>
-			<h2>Contacto</h2>
-			<p>Estamos ubicados en la ciudad de [ciudad], en la calle [dirección]. Puede comunicarse con nosotros al [número de teléfono] o por correo electrónico a [correo electrónico].</p>
-		</section>
-	</main>
-
-	<footer>
-		<p>Derechos de autor © [año] Veterinaria Genérica. Todos los derechos reservados.</p>
-	</footer>
-</body>
-</html>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="https://via.placeholder.com/300x200" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Servicio 1</h5>
+                        <p class="card-text">Descripción del servicio 1.</p>
+                        <a href="#" class="btn btn-primary">Más información</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img class="card-img-top" src="https://via.placeholder.com/300x200" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Servicio 2</h5>
+                        <p class="card-text">Descripción del servicio 2.</p>
+                        <a href="#" class="btn btn-primary">Más información</a>
+                    </div>
+                </div>
+            </div>
+           
